Add api docs to auth routes
